# model_viewer

./: .gitignore  Cargo.toml  README.md  notes.txt  rust-toolchain.toml
models/: rocket.blend  rocket.blend1  rocket.mtl  stone_wall1.mtl  tree.mtl  tree2.mtl  tree3.mtl
shaders/: fragment_color.glsl  fragment_texture.glsl  instanced_shadow_vertex.glsl  instanced_vertex.glsl  model_fragment.glsl  model_vertex.glsl  nonluminous_fragment.glsl  nonluminous_vertex.glsl  overlay_fragment.glsl  overlay_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex_color.glsl  vertex_pnt.glsl  vertex_texture.glsl
shaders/fragment/: glyph_fragment.glsl  model_fragment.glsl  overlay_fragment.glsl  text_fragment.glsl  ui_fragment.glsl
shaders/vertex/: glyph_vertex.glsl  instanced_shadow_vertex.glsl  instanced_vertex.glsl  model_vertex.glsl  shadow_vertex.glsl  ui_vertex.glsl
src/: glutil.rs  main.rs  model_viewer.code-workspace  prims.rs  routines.rs  structs.rs  uniform.rs
textures/skybox/: siege_dn.tga  siege_up.tga  totality_bk.tga  totality_dn.tga  totality_ft.tga  totality_lf.tga  totality_rt.tga  totality_up.tga
