[package]
name = "model_viewer"
version = "0.1.0"
authors = ["Nick Driscoll <nick.a.mavros@gmail.com>"]
edition = "2018"

[dependencies]
glfw = "0.32.0"
gl = "0.10.0"
image = "*"
openvr = "0.5.2"
nalgebra-glm = "0.3"
rand = "0.6"
nfd = "0.0.4"
wavefront_obj = "6.0.0"
noise = "0.5.1"
rodio = "0.9.0"
glyph_brush = "0.6.1"
chrono = "0.4.10"