[package]
name = "model_viewer"
version = "0.1.0"
authors = ["Nick Driscoll <nick.a.mavros@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.23"
gl = "0.14.0"
glfw = "0.51.0"
glyph_brush = "0.6.1"
image = "0.24.5"
nfd = "0.0.4"
noise = "0.5.1"
openvr = "0.6.0"
rand = "0.8.5"
rodio = "0.9.0"
wavefront_obj = "10.0.0"
nalgebra-glm = "0.3"
